--- a/sms/index.html
+++ b/sms/index.html
@@ -20,8 +20,10 @@
     </div>
 
     <div id="message"></div>
+    <div id="message1"></div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
